--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
     <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
         <link rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Karla:wght@800&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1></h1>
+        <h1><span id="title-color-1">Generate a </span></h1>
+        <h1><span id="title-color-2">random password</span></h1>
+        <p>Never use an insecure password again.</p>
+        <button>Generate passwords</button>
+        <p id="">Array1</p>
+        <p id="">Array2</p>
         <script src="index.js"></script>
     </body>
 </html>
