--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
         <h1><span id="title-color-1">Generate a </span></h1>
         <h1><span id="title-color-2">random password</span></h1>
         <p>Never use an insecure password again.</p>
-        <button>Generate passwords</button>
-        <p id="">Array1</p>
-        <p id="">Array2</p>
+        <button onclick="generatePassword()">Generate passwords</button>
+        <p id="password1">Array1</p>
+        <p id="password2">Array2</p>
         <script src="index.js"></script>
     </body>
 </html>
+
