--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
         <h1><span id="title-color-2">random password</span></h1>
         <p>Never use an insecure password again.</p>
         <button onclick="generatePassword()">Generate passwords</button>
+        <div id="flex-container">
         <p id="password1">Array1</p>
         <p id="password2">Array2</p>
         <script src="index.js"></script>
+        </div>
     </body>
 </html>
 
